# rust-projects

./: README.md
http/src/: main.rs
rust-projects/http/: Cargo.toml
rust-projects/http/src/: main.rs
rust-projects/rust_dashboard/: Cargo.toml
rust_dashboard/src/: main.rs
system-monitor/: Cargo.toml
system-monitor/src/: main.rs
system-monitor/src/config/: settings.rs
system-monitor/src/monitor/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
system-monitor/src/ui/: dashboard.rs
