[package]
name = "rust_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
tui = {version = "0.19", features = ["crossterm"]} #terminal UI LIB
crossterm = "0.27" #terminal IO CONTROL
sysinfo = "0.30" # sysinfo (CPU, MEM and etc)
tokio = {version = "1.34", features = ["full"]} #async timer for periodic update
